<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rush_b.SignInActivity">

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_marginTop="@dimen/edit_text_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@color/colorPrimary"
        android:textColor="@color/mainThemeYellow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:text="@string/go_to_sign_up"
            android:gravity="right"
            android:textSize="@dimen/medium_text_size"/>
        <TextView
            android:id="@+id/go_to_sign_up_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="@dimen/medium_text_size"
            android:layout_marginLeft="7dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_text_margin">
        <TextView
            android:id="@+id/status_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.75"
            android:text="@string/go_to_sign_up"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/medium_text_size"/>

    </LinearLayout>

</LinearLayout>
