<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_statistic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rush_b.fragment.StatisticFragment"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"
            android:layout_weight="0.19" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/your_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_view_margin"
                android:textStyle="bold"
                android:textColor="@color/mainThemeYellow"
                android:text="@string/name_string" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/mainThemeYellow"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/clan_string" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/mainThemeYellow"
                android:text="@string/you_are_here"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/mainThemeYellow"
                android:textStyle="bold"
                android:id="@+id/location_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Weather right now:"
                android:gravity="center"
                android:textColor="@color/mainThemeYellow"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/mainThemeYellow"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/weather_text_view"/>
            <TextView
                android:id="@+id/username_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_view_margin"
                android:textColor="@color/mainThemeYellow"
                android:text="@string/username_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/bomb_defused_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_view_margin"
                android:textColor="@color/mainThemeYellow"
                android:text="@string/bomb_defused_string" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/time_spent_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_view_margin"
                android:textColor="@color/mainThemeYellow"
                android:text="@string/time_spent_string" />
        </LinearLayout>

        <Button
            android:id="@+id/button_sign_out"
            android:layout_marginTop="@dimen/edit_text_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_out"
            android:background="@color/colorPrimary"
            android:textColor="@color/mainThemeYellow"/>
    </LinearLayout>

</ScrollView>
